corrected doubled scrollbar on firefox/chrome/IE iframes

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -163,7 +163,7 @@
 
 .item iframe {
 	background-color:#FFF;
-	width: 100%;height:100%;
+	width: 100%;height:98%;
 	border: none;
 }
 
